add qa in side bar

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -133,6 +133,14 @@
             </div>
           </li>
 
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-23">
+                <a href="{% url 'qa_parameter' %}" class="lan-22 no-color-change" style="all: inherit; cursor: pointer;">QA Parameters</a>
+              </h6>
+            </div>
+          </li>
+
           
         </ul>
       </div>
