--- a/zonoapp/templates/pages/qa_parameters/qa_parameters.html
+++ b/zonoapp/templates/pages/qa_parameters/qa_parameters.html
@@ -70,14 +70,14 @@
 
             <!-- Parameter Name -->
             <div class="mb-3">
-                <label for="parameter_name" class="form-label">Parameter Name</label>
+                <label for="parameter_name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="parameter_name" name="parameter_name" required>
                 <div class="invalid-feedback">Please provide a valid parameter name.</div>
             </div>
 
             <!-- Button to Add Key-Value Inputs -->
             <div class="mb-3">
-                <button type="button" class="btn btn-secondary" id="addFieldsButton">Add Key-Value Pair</button>
+                <button type="button" class="btn btn-secondary" id="addFieldsButton">Add parameters</button>
             </div>
 
             <!-- Container for Dynamic Key-Value Input Fields -->
@@ -85,7 +85,7 @@
 
             <!-- Submit Button -->
             <div class="d-grid gap-2">
-                <button class="btn btn-primary" type="submit">Add Parameter</button>
+                <button class="btn btn-primary" type="submit">Submit</button>
             </div>
         </form>
     </div>
@@ -104,7 +104,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Organisation Name</th>
-                            <th scope="col">Parameter Name</th>
+                            <th scope="col">Name</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -165,7 +165,7 @@
         keyInput.type = 'text';
         keyInput.classList.add('form-control');
         keyInput.name = 'key[]'; // Use name[] to handle multiple values in Django
-        keyInput.placeholder = 'Enter Key';
+        keyInput.placeholder = 'Enter Parameters';
         keyInput.required = true;
         keyCol.appendChild(keyInput);
 
@@ -176,7 +176,7 @@
         valueInput.type = 'text';
         valueInput.classList.add('form-control');
         valueInput.name = 'value[]';
-        valueInput.placeholder = 'Enter Value';
+        valueInput.placeholder = 'Enter Description';
         valueInput.required = true;
         valueCol.appendChild(valueInput);
 
