--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -246,8 +246,8 @@
         </li>
         <li class="profile-nav onhover-dropdown pe-0 py-0">
           <div class="d-flex align-items-center profile-media"><img class="b-r-25" src="{% static 'assets/images/dashboard/profile.png' %}" alt="">
-            <div class="flex-grow-1 user"><span>Helen Walter</span>
-              <p class="mb-0 font-nunito">Admin 
+            <div class="flex-grow-1 user"><span>{{ request.user.username }}</span>
+              <p class="mb-0 font-nunito"> {{ request.user.role.role}}
                 <svg>
                   <use href="{% static 'assets/svg/icon-sprite.svg' %}#header-arrow-down"></use>
                 </svg>
@@ -268,7 +268,7 @@
       <div class="ProfileCard u-cf">              
       <div class="ProfileCard-avatar"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-airplay m-0"><path d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"></path><polygon points="12 15 17 21 7 21 12 15"></polygon></svg></div>
       <div class="ProfileCard-details">
-      <div class="ProfileCard-realName">{{name}}</div>
+      <div class="ProfileCard-realName"> {{name}}</div>
       </div>
       </div>
     </script>
