--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -43,7 +43,7 @@
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
             </svg><span class=" ">Create Campaign</span></a>
-            
+          </li>
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list_call_logs' %}">
               <svg class="stroke-icon">
                 <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
@@ -124,6 +124,12 @@
                 </h6>
             </div>
           </li>
+          
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
+            <a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}">Voice</a>
+          </li>
+
+          
           <!-- Provider -->
           <li class="sidebar-main-title">
             <div>
@@ -133,6 +139,10 @@
             </div>
           </li>
 
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
+            <a class="sidebar-link sidebar-title" href="{% url 'provider_view' %}">Provider</a>
+          </li>
+
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-23">
@@ -140,6 +150,10 @@
               </h6>
             </div>
           </li>
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
+            <a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}">QA Parameters</a>
+          </li>
+
 
           
         </ul>
