--- a/zonoapp/templates/sign-up.html
+++ b/zonoapp/templates/sign-up.html
@@ -20,7 +20,7 @@
                 <p>Enter your personal details to create account</p>
                 <div class="form-group">
                   <label class="col-form-label">User Name</label>
-                  <input class="form-control" type="text" name="username" required="username" placeholder="">
+                  <input class="form-control" type="text" name="username" required="username" placeholder="username">
                 </div>
                 <div class="form-group">
                   <label class="col-form-label">Email Address</label>
