--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -73,6 +73,14 @@
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-21">
+                <a href="{% url 'list-user' %}" class="lan-21 no-color-change" style="all: inherit;cursor: pointer;">User Management</a>
+              </h6>
+            </div>
+          </li>  
+
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-21">
                 <a href="{% url 'live_call_list' %}" class="lan-21 no-color-change" style="all: inherit;cursor: pointer;">live Monitoring</a>
               </h6>
             </div>
